cmake_minimum_required(VERSION 3.26)
project(data-structure C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(test)
add_subdirectory(learnClang)
add_subdirectory(status)
add_subdirectory(chapter_02)
add_subdirectory(chapter_03)
add_subdirectory(chapter_04)
add_subdirectory(chapter_05)
add_subdirectory(chapter_08)